# carroGPT

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/src/app/: main.py
backend/src/app/agent_crag/: router.py  schemas.py  services.py
backend/src/app/agent_crag/agent/: edges.py  graph.py  state.py
backend/src/app/agent_crag/agent/nodes/: document_grader.py  generator.py  prompts.py  query_analyzer.py  query_rewriter.py  retriever.py  web_search.py
backend/src/app/agent_react/: router.py  schemas.py  service.py
backend/src/app/agent_react/agent/: graph.py  graph_scratch.py  prompts.py  state.py  tools.py
backend/src/app/core/: config.py
backend/src/app/db/: exceptions.py  router.py  schemas.py  service.py  tasks.py  utils.py
frontend/: .gitignore  Dockerfile  Home.py  pyproject.toml  requirements.txt
frontend/.streamlit/: config.toml
frontend/api/: agent_crag.py  agent_react.py  collections.py  general.py
frontend/pages/: 1_ReAct_Agent.py  2_CRAG_Agent(s).py  3_Knowledge_Base.py
frontend/utils/: session.py
