[project]
name = "carrobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.19",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.8",
    "llama-parse>=0.6.30",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.26.0",
    "pypdf>=5.6.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "qdrant-client[fastembed]>=1.14.2",
    "uvicorn[standard]>=0.34.3",
]
